# django-model-signals

./: .gitignore  LICENSE.md  README.md  pyproject.toml
django_model_signals/: apps.py  dispatcher.py  manager.py  models.py  signals.py  transceiver.py
