[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-model-signals"
version = "0.1.0"
authors = [
  { name="Digital Valley", email="techteam@digitalvalley.nl" }
]
description = "Django Model Signals makes it easier to keep model related business logic in your Django models by allowing them to become transceivers of their own signals."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "django"
]
